use yml file for data access

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="tech-tree">
   <div class="tech-tree__level tech-tree__level--1">
-    {% include test-module.html name="Batch Pick to LPN" url="batch-pick" type="a" class="push_7-16 unit-1" progress="2" %}
+    {% include module.html id="batch_picking" class="push_7-16 unit-1" %}
   </div>
   <div class="tech-tree__level tech-tree__level--2">
     {% include test-module.html name="New Pick Cart" type="b" class="push_1-16 unit-2" %}
