--- a/index.html
+++ b/index.html
@@ -28,3 +28,5 @@ layout: default
     {% include test-module.html name="Batch Pick with Sortation" type="d" class="push_7-16 unit-14" %}
   </div>
 </div>
+
+<div class="cover-all"></div>
