--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@ layout: default
     {% include module.html id="batch_picking" class="push_7-16 unit-1" %}
   </div>
   <div class="tech-tree__level tech-tree__level--2">
-    {% include test-module.html name="New Pick Cart" type="b" class="push_1-16 unit-2" %}
-    {% include test-module.html name="Pick Scanning Hardware" type="b" class="push_2-16 unit-3" progress="1" %}
-    {% include test-module.html name="ACC Picking Digitization" type="b" class="push_2-16 unit-4" %}
-    {% include test-module.html name="Pick Pathing" type="b" class="push_2-16 unit-5" %}
+    {% include module.html id="pick_cart" class="push_1-16 unit-2" %}
+    {% include module.html id="pick_scanning_hardware" class="push_2-16 unit-3"%}
+    {% include module.html id="digital_non_apparel" class="push_2-16 unit-4" %}
+    {% include module.html id="pick_pathing" class="push_2-16 unit-5" %}
   </div>
   <div class="tech-tree__level tech-tree__level--3">
-    {% include test-module.html name="Put to Light" type="c" class="unit-6" %}
-    {% include test-module.html name="Put to Scan" type="c" class="unit-7" %}
-    {% include test-module.html name="Post-Pick Sortation" type="d" class="push_3-16 unit-8" %}
+    {% include module.html id="put_to_light" class="unit-6" %}
+    {% include module.html id="put_to_scan" class="unit-7" %}
+    {% include module.html id="post_pick" class="push_3-16 unit-8" %}
   </div>
   <div class="tech-tree__level tech-tree__level--4">
-    {% include test-module.html name="Batch Pick to LPN v2" type="c" class="push_1-16 unit-9" %}
-    {% include test-module.html name="Put Wall" type="d" class="push_2-16 unit-10" %}
-    {% include test-module.html name="? Sort Solution" type="d" class="unit-11" %}
-    {% include test-module.html name="Put to Tote/Line" type="d" class="unit-12" %}
-    {% include test-module.html name="Pick Pathing v2" type="b" class="push_2-16 unit-13" %}
+    {% include module.html id="batch_picking_v2" class="push_1-16 unit-9" %}
+    {% include module.html id="put_wall" class="push_2-16 unit-10" %}
+    {% include module.html id="sort_solution" class="unit-11" %}
+    {% include module.html id="put_to_tote" class="unit-12" %}
+    {% include module.html id="pick_pathing" class="push_2-16 unit-13" %}
   </div>
   <div class="tech-tree__level tech-tree__level--5">
-    {% include test-module.html name="Batch Pick with Sortation" type="d" class="push_7-16 unit-14" %}
+    {% include module.html id="batch_pick_with_sortation" class="push_7-16 unit-14" %}
   </div>
 </div>
 
